[CollectIdea] API CRED Category done
